--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,5 +7,9 @@
 
 body {
   background-image: url('https://farm5.staticflickr.com/4832/31245585687_121cb2c2ef_h.jpg');
+  background-size: 80%;
+  background-position: center;
+  background-attachment: fixed;
+  
   font-family: 'jedifont';
 }
