--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,11 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  position: relative;
+  z-index: 3;
 }
 
 h1 {
-  font-size: 100px;
+  font-size: 50px;
+  letter-spacing: 10px;
 }
