--- a/src/components/ScrollingText/ScrollingText.css
+++ b/src/components/ScrollingText/ScrollingText.css
@@ -1,9 +1,9 @@
 .fade {
   position: relative;
   width: 100%;
-  min-height: 50vh;
-  top: -50px;
-  background-image: linear-gradient(0deg, transparent, black 75%);
+  min-height: 80vh;
+  top: 125px;
+  /* background-image: linear-gradient(0deg, transparent, black 75%); */
   z-index: 1;
 }
 
@@ -11,14 +11,14 @@
   display: flex;
   justify-content: center;
   position: relative;
-  height: 300px;
+  height: 500px;
   color: #feda4a;
   font-family: 'Pathway Gothic One', sans-serif;
-  font-size: 300%;
+  font-size: 400%;
   font-weight: 600;
   letter-spacing: 6px;
   line-height: 150%;
-  perspective: 350px;
+  perspective: 200px;
   text-align: justify;
 }
 
@@ -26,6 +26,7 @@
   position: relative;
   top: 99999px;
   transform-origin: 10% 60%;
+  z-index: 1;
   animation: crawl 40s linear;
 }
 .crawl > .title {
