--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,14 +1,15 @@
 .nav {
   height: 40px;
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-content: center;
   align-items: center;
   width: 100%;
   margin: 0 auto;
   position: relative;
   z-index: 2;
-  background-color:#bea64f;
+  background: #bea64f;
 }
 
 button {
@@ -19,43 +20,69 @@ button {
   font-weight: 600;
 }
 
-Button {
-	-moz-box-shadow: 0px 1px 0px 0px #bea64f;
-	-webkit-box-shadow: 0px 1px 0px 0px #bea64f;
-	box-shadow: 0px 1px 0px 0px #bea64f;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #fada65));
-	background:-moz-linear-gradient(top, #ffec64 5%, #fada65 100%);
-	background:-webkit-linear-gradient(top, #ffec64 5%, #fada65 100%);
-	background:-o-linear-gradient(top, #ffec64 5%, #fada65 100%);
-	background:-ms-linear-gradient(top, #ffec64 5%, #fada65 100%);
-	background:linear-gradient(to bottom, #ffec64 5%, #fada65 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#fada65',GradientType=0);
-	background-color:#ffec64;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #fada65;
-	display:inline-block;
-	cursor:pointer;
-	color:#333333;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
+button {
+  -moz-box-shadow: 0px 1px 0px 0px #bea64f;
+  -webkit-box-shadow: 0px 1px 0px 0px #bea64f;
+  box-shadow: 0px 1px 0px 0px #bea64f;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #ffec64),
+    color-stop(1, #fada65)
+  );
+  background: -moz-linear-gradient(top, #ffec64 5%, #fada65 100%);
+  background: -webkit-linear-gradient(top, #ffec64 5%, #fada65 100%);
+  background: -o-linear-gradient(top, #ffec64 5%, #fada65 100%);
+  background: -ms-linear-gradient(top, #ffec64 5%, #fada65 100%);
+  background: linear-gradient(to bottom, #ffec64 5%, #fada65 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#fada65',GradientType=0);
+  background-color: #ffec64;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: 1px solid #fada65;
+  display: inline-block;
+  cursor: pointer;
+  color: #333333;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffee66;
 }
 button:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fada65), color-stop(1, #ffec64));
-	background:-moz-linear-gradient(top, #fada65 5%, #ffec64 100%);
-	background:-webkit-linear-gradient(top, #fada65 5%, #ffec64 100%);
-	background:-o-linear-gradient(top, #fada65 5%, #ffec64 100%);
-	background:-ms-linear-gradient(top, #fada65 5%, #ffec64 100%);
-	background:linear-gradient(to bottom, #fada65 5%, #ffec64 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fada65', endColorstr='#ffec64',GradientType=0);
-	background-color:#fada65;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #fada65),
+    color-stop(1, #ffec64)
+  );
+  background: -moz-linear-gradient(top, #fada65 5%, #ffec64 100%);
+  background: -webkit-linear-gradient(top, #fada65 5%, #ffec64 100%);
+  background: -o-linear-gradient(top, #fada65 5%, #ffec64 100%);
+  background: -ms-linear-gradient(top, #fada65 5%, #ffec64 100%);
+  background: linear-gradient(to bottom, #fada65 5%, #ffec64 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fada65', endColorstr='#ffec64',GradientType=0);
+  background-color: #fada65;
 }
 button: {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
+
+/* .background-fade {
+  height: 200px;
+  display: flex;
+  flex-basis: 100%;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.959),
+    rgba(0, 0, 0, 0.87),
+    rgba(0, 0, 0, 0.76),
+    transparent 70%
+  );
+  position: relative;
+  z-index: 4;
+} */
