--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -25,8 +25,9 @@
 
 button {
   font-family: 'mono';
-  padding-top: 5px;
-  font-size: 17px;
+  /* font-family: 'Pathway Gothic One', sans-serif; */
+  padding-top: 7px;
+  font-size: 20px;
   width: 150px;
   height: 40px;
   color:#eabc01;
