--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,9 +21,15 @@
   /* top: 145px; */
 }
 
+/* .img-div {
+  height: 200px;
+  width: 400px;
+  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.9);
+} */
+
 .main-title {
   font-size: 50px;
-  letter-spacing: 10px;
+  /* letter-spacing: 10px; */
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   transition: all 0.5s;
