Add some css to boxes and set up local storage

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,13 @@
 .temp {
   color: red;
 }
+
+.card {
+  border: 2px solid #feda4a;
+  min-height: 300px;
+}
+
+ul {
+  list-style-type: none;
+  text-align: center;
+}
