--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,9 +15,10 @@
 }
 
 .header-pic {
-  opacity: .3;
+  opacity: .7;
   position: relative;
   z-index: 1;
+  width: 500px;
   /* top: 145px; */
 }
 
