--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,13 +1,51 @@
-.temp {
-  color: red;
+.info {
+  color:#eabc01;
 }
 
 .card {
   border: 2px solid #feda4a;
+  border-radius: 10%;
   min-height: 300px;
+  background-image: url(../../r2d2.png);
+  background-size: cover;
+  /* opacity: .5 */
+}
+
+.list-container {
+  margin-top: 160px;
 }
 
 ul {
   list-style-type: none;
+  padding-left: 0;
   text-align: center;
+}
+
+.fave-button, input[type="submit"], input[type="reset"] {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline: inherit;
+  }
+
+.button-div {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  padding: 10px 10px 0 0;
+}
+
+.fa-star {
+  color: #feda4a;
+  font-size: 22px;
+  background-color: none;
+}
+
+.fave-button:hover .one,
+.fave-button .two {
+    display: none;
+}
+.fave-button:hover .two{
+    display: inline;
 }
