--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.info {
+/* .info {
   color:#eabc01;
 }
 
@@ -8,7 +8,7 @@
   min-height: 300px;
   background-image: url(../../r2d2.png);
   background-size: cover;
-  /* opacity: .5 */
+ 
 }
 
 .list-container {
@@ -21,6 +21,8 @@ ul {
   text-align: center;
 }
 
+*/
+
 .fave-button, input[type="submit"], input[type="reset"] {
     background: none;
     border: none;
@@ -28,6 +30,7 @@ ul {
     cursor: pointer;
     outline: inherit;
   }
+  
 
 .button-div {
   display: flex;
@@ -48,4 +51,57 @@ ul {
 }
 .fave-button:hover .two{
     display: inline;
+} 
+
+.flip-container
+{
+    position:relative;
+    -webkit-perspective:1000;
+    perspective:1000;
+    
+}
+
+.flip-cards
+{
+    width:200px;
+    height:291px;
+    position:relative;
+    float:left;    
+    margin-left:5px;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    border: 2px solid #feda4a;
+  border-radius: 10%;
+  min-height: 300px;
+}
+
+
+.flip-cards:hover
+{
+    transform: rotateY( 180deg );
+    -webkit-transform: rotateY(180deg);
+}
+
+.flip-cards div
+{
+    width:200px;
+    height:291px;
+    position:absolute;
+    border-radius:15px;    
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.front-card
+{
+    z-index: 2;
+    background-image: url('/images/blog/cover.png');
+}
+
+.reverse-card
+{
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY( 180deg );
 }
