--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -3,12 +3,12 @@
 }
 
 .card-container {
- display: grid;
- grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
- grid-auto-rows: auto;
- grid-gap: 1rem;
- width: 85%;
- margin: 0 auto;
- padding-bottom: 10px;
- 
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: auto;
+  grid-gap: 1rem;
+  width: 85%;
+  margin: 0 auto;
+  padding-bottom: 10px;
+  margin-top: -60px;
 }
