--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,6 +42,9 @@
   position: relative;
   z-index: 2;
   top: -140px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-decoration: none;
 }
 
 @-webkit-keyframes neon2 {
